[package]
name = "dynamic_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.2"
borsh-derive = "0.10.2"
rdftk_core = "0.3.1"
rdftk_iri = "0.1.9"
regex = "1.7.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
